finished generator support on all screens